--- a/inspection.html
+++ b/inspection.html
@@ -11,9 +11,9 @@
   <script src="inspection.js"></script>
 </head>
 <body>
-  <div class="h1top">
-    <h1>驗收入庫1</h1>
-  </div>
+  <span class="h1top">
+    <h1>驗收入庫</h1>
+  </span>
   <style>
     #firstinspection {
       border-bottom: 1px solid #000000;
@@ -36,7 +36,7 @@
     </table>
   </div>
   <div class="pagination">
-    <button id="submitFormbtn" onclick="submitForm()">送出</button>
+    <button id="submitFormbtn" onclick="submitForm()" >送出</button>
   </div>
 
   <div class="under-line">
