--- a/inspection.html
+++ b/inspection.html
@@ -11,9 +11,9 @@
   <script src="inspection.js"></script>
 </head>
 <body>
-  <div class="d-flex justify-content-center align-items-center h1top">
-    <h1 class="mb-0">驗收入庫</h1>
-    <div class="ml-auto">
+  <div class="d-flex justify-content-between align-items-center h1top">
+    <h1 class="mb-0 mx-auto">驗收入庫</h1>
+    <div class="submit-btn">
       <button id="submitFormbtn" onclick="submitForm()">送出</button>
     </div>
   </div>
