--- a/inspection.html
+++ b/inspection.html
@@ -13,9 +13,7 @@
 <body>
   <div class="d-flex justify-content-between align-items-center h1top">
     <h1 class="mb-0 mx-auto">驗收入庫</h1>
-    <div class="submit-btn">
-      <button id="submitFormbtn" onclick="submitForm()">送出</button>
-    </div>
+    <button id="submitFormbtn" class="btn btn-primary">送出</button>
   </div>
   <style>
     #firstinspection {
