--- a/inspection.html
+++ b/inspection.html
@@ -11,15 +11,11 @@
   <script src="inspection.js"></script>
 </head>
 <body>
-  <div class="d-flex justify-content-between align-items-center h1top">
-    <h1 class="mb-0 mx-auto">驗收入庫</h1>
-    <button id="submitFormbtn" class="btn btn-primary">送出</button>
+  <div class="h1top">
+    <h1>驗收入庫</h1>
+    <button id="submitFormbtn" onclick="submitForm()">送出</button>
   </div>
-  <style>
-    #firstinspection {
-      border-bottom: 1px solid #000000;
-    }
-  </style>
+ 
   <div class="table-container">
     <table class="table table-striped table-hover">
         <thead>
