--- a/inspection.html
+++ b/inspection.html
@@ -13,7 +13,9 @@
 <body>
   <div class="h1top">
     <h1>驗收入庫</h1>
-    <button id="submitFormbtn" onclick="submitForm()">送出</button>
+    <div class="pagination">
+      <button id="submitFormbtn" onclick="submitForm()">送出</button>
+    </div>
   </div>
  
   <div class="table-container">
