--- a/inspection.html
+++ b/inspection.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <div class="h1top">
-    <h1>驗收入庫</h1>
+    <h1 class="h1_inspection">驗收入庫</h1>
     <div class="pagination">
       <button id="submitFormbtn" onclick="submitForm()">送出</button>
     </div>
