--- a/inspection.html
+++ b/inspection.html
@@ -17,7 +17,11 @@
       <button id="submitFormbtn" onclick="submitForm()">送出</button>
     </div>
   </div>
- 
+  <style>
+    #firstinspection {
+      border-bottom: 2px solid #000000;
+    }
+  </style>
   <div class="table-container">
     <table class="table table-striped table-hover">
         <thead>
