--- a/inspection.html
+++ b/inspection.html
@@ -6,8 +6,9 @@
   <title>驗收入庫操作頁</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="inspection.css">
+  <script src="ApiURL.js"></script>
+  <script src="WebApiFunc.js"></script>
   <script src="frontpage.js"></script>
-  <script src="userData.js"></script>
   <script src="inspection.js"></script>
 </head>
 <body>
