--- a/bluetoothEx.html
+++ b/bluetoothEx.html
@@ -25,6 +25,7 @@
             // 解析藍牙掃描器返回的數據
             if(parsedCode != '')
             {
+                alert(parsedCode);
                 console.log(parsedCode);
             }         
         }
