--- a/frontpage.html
+++ b/frontpage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-hans">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,9 +18,9 @@
   <button class="button" id="inventory-btn">盤點</button>
   <button class="button" id="consumption-btn">庫存消耗量</button>
   <button class="button" id="controlled-drugs-btn">管制藥結存報表</button>
-  <button class="button" id="inspection-btn">驗收入庫</button>
+  <button class="button" id="inspec-tion-btn" onclick="inspectionClick()">驗收入庫</button>
   <button class="button" id="emg-application-btn">緊急申領</button>
-  
+
   <div class="header">
       <span id="username"></span>
       <button class="logout-btn" onclick="logout()">登出</button>
@@ -31,6 +31,6 @@
   <div class="under-line">
     <B>Copyright ©2023 鴻森整合機電有限公司</B>
  </div>
-
+ 
 </body>
 </html>
