--- a/inspection.html
+++ b/inspection.html
@@ -8,10 +8,9 @@
   <link rel="stylesheet" href="inspection.css">
   <script src="ApiURL.js"></script>
   <script src="WebApiFunc.js"></script>
-  <script src="../dist/JsBarcode.all.js"></script>
-
+  <script src="/dist/JsBarcode.all.js"></script>
   <!-- <script src="frontpage.js"></script> -->
-  
+  <script src="inspection.js"></script>
 </head>
 <body>
   <div class="h1top">
@@ -24,11 +23,9 @@
       <button id="submitFormbtn" onclick="submitForm()">送出</button>
     </div>
   </div>
-  <style>
-    #firstinspection {
-      border-bottom: 2px solid #000000;
-    }
-  </style>
+  <div class="serch_div">
+    <input type="text" class="drugNameText" placeholder="藥名搜尋" onkeydown="search_name_OnEnter(event)">
+  </div>
   <div class="table-container">
     <table class="table table-striped table-hover">
         <thead>
@@ -51,7 +48,7 @@
     <B>Copyright ©2023 鴻森整合機電有限公司</B>
   </div>
   
-  <script src="inspection.js"></script>
+  
   <script>
     
     var barcode_value = '';
@@ -72,8 +69,7 @@
                 searchItem(data.Data, parsedCode).then((result) => {
                   const dataLength = result.length;
                   if(dataLength == 0) return;
-                  const qty = prompt(`${result[0].CODE} 請輸入數量：`);
-
+                  const qty = prompt(`藥名:${result[0].NAME}\n 請輸入數量：`);
                 }).catch((error) => {
                   console.error(error);
                 });
