--- a/frontpage.html
+++ b/frontpage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-hans">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -29,8 +29,8 @@
 
 
   <div class="under-line">
-    <B>Copyright ©2023 鴻森整合機電有限公司</B>
- </div>
+    <B> Copyright ©2023 鴻森整合機電有限公司 </B>
+  </div>
  
 </body>
 </html>
