--- a/inspection.html
+++ b/inspection.html
@@ -24,7 +24,7 @@
     </div>
   </div>
   <div class="serch_div">
-    <input type="text" class="drugNameText" placeholder="藥名搜尋" onkeydown="search_name_OnEnter(event)">
+    <input type="text" class="drugNameText" placeholder="藥名搜尋" onkeydown="search_By_name_Event(event)">
   </div>
   <div class="table-container">
     <table class="table table-striped table-hover">
@@ -45,7 +45,7 @@
   
 
   <div class="under-line">
-    <B>Copyright ©2023 鴻森整合機電有限公司</B>
+    <B> Copyright ©2023 鴻森整合機電有限公司 </B>
   </div>
   
   
@@ -69,7 +69,21 @@
                 searchItem(data.Data, parsedCode).then((result) => {
                   const dataLength = result.length;
                   if(dataLength == 0) return;
-                  const qty = prompt(`藥名:${result[0].NAME}\n 請輸入數量：`);
+                  if(dataLength == 1)
+                  {
+                    const qty = prompt(`藥名:${result[0].NAME}\n 請輸入數量：`);
+                    if(qty)
+                    {
+                      set_END_QTY(result[0].GUID,qty);
+                      updateQtyByGuid(result[0].GUID,qty);
+                    }
+                  }
+                  else
+                  {
+                    search_By_name(result[0].NAME);
+                  }
+                  
+                
                 }).catch((error) => {
                   console.error(error);
                 });
