--- a/inspection.html
+++ b/inspection.html
@@ -30,15 +30,11 @@
     <table class="table table-striped table-hover">
         <thead>
             <tr>
-                <th>藥品資訊</th>
-                <th>數量</th>
+                <th style="font-weight: bolder;font-size: 18px;">藥品資訊</th>
+                <th style="font-weight: bolder;font-size: 18px;">數量</th>
             </tr>
         </thead>
-       <tbody>
-          <tr>
-          </tr>
-                <tr>
-                </tr>
+              <tbody>
               </tbody>
     </table>
   </div>
