--- a/inspection.html
+++ b/inspection.html
@@ -225,8 +225,8 @@ function AddNewRow(_index,lot,date,qty) {
   <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path>
   <line x1="10" y1="11" x2="10" y2="17"></line>
   <line x1="14" y1="11" x2="14" y2="17"></line>`;
-  const divs = myModal1.querySelectorAll(".rows");
-  rowNum = (divs.length / 3) + 1;
+  const Modalrows = myModal1.querySelectorAll(".Modalrows-area");
+  rowNum = Modalrows.length + 1;
   delBtn.className = `delBtn${rowNum}`;
   delBtn.setAttribute("_rowNum",rowNum);
   delBtn.setAttribute("_index",_index);
@@ -242,7 +242,7 @@ function AddNewRow(_index,lot,date,qty) {
           var _rowNum = Modalrows[i].getAttribute("_rowNum");
           if(_rowNum == delBtn_rowNum)Modalrows[i].remove();
       }
-      rowNum = (myModal1.querySelectorAll(".rows").length / 3) + 1;
+      rowNum = Modalrows.length + 1;
   });
   // create text nodes
   const orderText = document.createTextNode("<div style=  flex-direction: row;'> <b>(批效: " + rowNum + ")</b> </div> ");
