Co-authored-by: ChrisMDFK <ChrisMDFK@users.noreply.github.com>

--- a/frontinventory.html
+++ b/frontinventory.html
@@ -20,7 +20,7 @@
     <button id="submitdownloadbtn" class="submitdownloadbtn" onclick="submitdownload()">下載報表</button>
   </div>
   <div class="submit_div1">
-    <button id="submitinfobtn" class="submitinfobtn" onclick="submitinfo()">新增盤點</button>
+    <button id="AddINVbtn" class="AddINVbtn" onclick="AddINVbtn_Click()">新增盤點</button>
   </div>
 </div>
 <!-- 表格首行 -->
