--- a/inventory.html
+++ b/inventory.html
@@ -23,7 +23,7 @@
         <input class="form-check-input" type="checkbox" id="toggleCK" checked>
         <label class="form-check-label" for="toggleLB">Scanner</label>
       </div>
-      <button id="submitFormbtn" onclick="submitForm()">送出</button>
+      <button id="submitFormbtn" onclick="submitForm()">結束盤點</button>
     </div>
   </div>
   <div class="serch_div">
