--- a/inventory.html
+++ b/inventory.html
@@ -9,10 +9,9 @@
   <script src="ApiURL.js"></script>
   <script src="WebApiFunc.js"></script>
   <script src="/dist/JsBarcode.all.js"></script>
-  <!-- <script src="frontpage.js"></script> -->
   <script src="inventory.js"></script>
   <script src="inventory_modal.js"></script>
-  
+  <!-- <script src="session_check.js"></script> -->
 </head>
 <body>
   <header>
