--- a/frontpage.html
+++ b/frontpage.html
@@ -8,6 +8,7 @@
     <script src="ApiURL.js"></script>
     <script src="WebApiFunc.js"></script>
     <script src="frontpage.js"></script>
+    <script src="session_check.js"></script>
 </head>
 <body>
   <h1>智慧庫儲盤點系統</h1>
