--- a/inventory.html
+++ b/inventory.html
@@ -7,8 +7,8 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="inventory.css">
   <script src="ApiURL.js"></script>
-  <script src="WebApiFunc.js"></script>
-  <script src="/dist/JsBarcode.all.js"></script>
+  <script src="./Function/WebApiFunc.js"></script>
+  <script src="./dist/JsBarcode.all.js"></script>
   <script src="inventory.js"></script>
   <script src="inventory_modal.js"></script>
   <!-- <script src="session_check.js"></script> -->
