--- a/inventory/frontpage.html
+++ b/inventory/frontpage.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>盤點單管理</title>
-    <link rel="stylesheet" href="frontinventory.css">
+    <link rel="stylesheet" href="fronpage.css">
     <script src="ApiURL.js"></script>
-    <script src="WebApiFunc.js"></script>
+    <script src="./Function/WebApiFunc.js"></script>
     <script src="./svg/mySVG.js"></script>
-    <script src="frontinventory.js"></script>
-    <script src="frontinventory_addform.js"></script>
+    <script src="./Function/Basic.js"></script>
+    <script src="frontpage.js"></script>
+    <script src="frontpage_addform.js"></script>
     <!-- <script src="session_check.js"></script> -->
 </head>
 <body>
