--- a/inventory/frontpage.html
+++ b/inventory/frontpage.html
@@ -10,9 +10,10 @@
     <script src="../Function/WebApiFunc.js"></script>
     <script src="../svg/mySVG.js"></script>
     <script src="../Function/Basic.js"></script>
+    <script src="jsonFunc.js"></script>
     <script src="frontpage.js"></script>
     <script src="frontpage_addform.js"></script>
-    <!-- <script src="session_check.js"></script> -->
+    <!-- <script src="../session_check.js"></script> -->
 </head>
 <body>
   <div class="form" id="form" style="width: 100%; height: 100%;">
@@ -29,7 +30,6 @@
 
     const main_div = get_main();
     form.appendChild(main_div);
-
     
     </script>
   </div>
