--- a/inventory/main.html
+++ b/inventory/main.html
@@ -5,13 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>盤點操作頁</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <link rel="stylesheet" href="inventory.css">
+  <link rel="stylesheet" href="main.css">
   <script src="../ApiURL.js"></script>
   <script src="../Function/WebApiFunc.js"></script>
   <script src="../dist/JsBarcode.all.js"></script>
+  <script src="jsonFunc.js"></script>
   <script src="main.js"></script>
   <script src="main_modal.js"></script>
-  <!-- <script src="session_check.js"></script> -->
+  <!-- <script src="../session_check.js"></script> -->
 </head>
 <body>
   <header>
