Co-authored-by: ChrisMDFK <ChrisMDFK@users.noreply.github.com>

--- a/inventory/main.html
+++ b/inventory/main.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>盤點操作頁</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="main.css">
   <script src="../ApiURL.js"></script>
   <script src="../Function/WebApiFunc.js"></script>
   <script src="../dist/JsBarcode.all.js"></script>
+  <script src="../Function/Basic.js"></script>
   <script src="jsonFunc.js"></script>
   <script src="main.js"></script>
   <script src="main_modal.js"></script>
