--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
     <title>智慧庫儲登入頁</title>
 
     <script src="ApiURL.js"></script>
-    <script src="WebApiFunc.js"></script>
+    <script src="./Function/WebApiFunc.js"></script>
     <script src="login.js"></script>
 
 </head>
