--- a/inventory/frontpage.html
+++ b/inventory/frontpage.html
@@ -10,9 +10,13 @@
     <script src="../Function/WebApiFunc.js"></script>
     <script src="../svg/mySVG.js"></script>
     <script src="../Function/Basic.js"></script>
+    <script src="../popup/loading.js"></script>
     <script src="jsonFunc.js"></script>
     <script src="frontpage.js"></script>
     <script src="frontpage_addform.js"></script>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <!-- <script src="../session_check.js"></script> -->
 </head>
 <body>
