--- a/inventory/frontpage.html
+++ b/inventory/frontpage.html
@@ -15,8 +15,10 @@
     <script src="frontpage.js"></script>
     <script src="frontpage_addform.js"></script>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+    <link href="../UI/H5_Date/css/datepicker.css" rel="stylesheet">
+    <script type="text/javascript" src="../UI/H5_Date/js/jquery-1.9.1.js"></script>
+    <script type="text/javascript" src="../UI/H5_Date/js/iscroll.js"></script>
+    <script type="text/javascript" src="../UI/H5_Date/datepicker.js"></script>
     <!-- <script src="../session_check.js"></script> -->
 </head>
 <body>
@@ -43,7 +45,40 @@
   <B> Copyright ©2023 鴻森整合機電有限公司 </B>
 </div>
 <script>
-  
+   $(function()
+   {
+        $('.find_start_date_input').focus(function(event) 
+        {
+          /* Act on the event */
+          $(this).date(
+          {
+            beginyear : 2022,
+            curdate:true
+          },function()
+          {
+            //按下確定
+          },function()
+          {
+            //按下取消
+          });
+        });
+        $('.find_end_date_input').focus(function(event) 
+        {
+          /* Act on the event */
+          $(this).date(
+          {
+            beginyear : 2022,
+            curdate:true
+          },function()
+          {
+            //按下確定
+          },function()
+          {
+            //按下取消
+          });
+        });
+
+  })
 </script>
 </body>
 
