--- a/controlleddrug/main.html
+++ b/controlleddrug/main.html
@@ -28,14 +28,9 @@
       report.appendChild(header_div);
       const main_div = get_main();
       report.appendChild(main_div);
-      get_all_div();
-      get_all_div();
-      get_all_div();
-      get_all_div();
 
-      get_all_div();
-      get_all_div();
-      get_all_div();
+      add_divs();
+      
 
       </script>
    
