Co-authored-by: ChrisMDFK <ChrisMDFK@users.noreply.github.com>

--- a/frontpage.html
+++ b/frontpage.html
@@ -17,10 +17,10 @@
     <div class="button-text"><B>功能列表</B></div>
   
   <button class="button" id="inventory-btn" onclick="inventoryBtnClick()">盤點</button>
-  <button class="button" id="consumption-btn">庫存消耗量</button>
+  <!-- <button class="button" id="consumption-btn">庫存消耗量</button> -->
   <button class="button" id="controlled-drugs-btn">管制藥結存報表</button>
-  <button class="button" id="inspec-tion-btn" onclick="inspectionClick()">驗收入庫</button>
-  <button class="button" id="emg-application-btn">緊急申領</button>
+  <!-- <button class="button" id="inspec-tion-btn" onclick="inspectionClick()">驗收入庫</button> -->
+  <!-- <button class="button" id="emg-application-btn">緊急申領</button> -->
 
   <div class="header">
       <span id="username"></span>
