--- a/frontpage.html
+++ b/frontpage.html
@@ -8,7 +8,7 @@
     <script src="ApiURL.js"></script>
     <script src="WebApiFunc.js"></script>
     <script src="frontpage.js"></script>
-    <script src="session_check.js"></script>
+    <!-- <script src="session_check.js"></script> -->
 </head>
 <body>
   <h1>智慧庫儲盤點系統</h1>
@@ -18,7 +18,7 @@
   
   <button class="button" id="inventory-btn" onclick="inventoryBtnClick()">盤點</button>
   <!-- <button class="button" id="consumption-btn">庫存消耗量</button> -->
-  <button class="button" id="controlled-drugs-btn">管制藥結存報表</button>
+  <button class="button" id="controlled-drugs-btn" onclick="controlledBtnClick()">管制藥結存報表</button>
   <!-- <button class="button" id="inspec-tion-btn" onclick="inspectionClick()">驗收入庫</button> -->
   <!-- <button class="button" id="emg-application-btn">緊急申領</button> -->
 
