--- a/inventory/frontpage.html
+++ b/inventory/frontpage.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>盤點單管理</title>
     <link rel="stylesheet" href="fronpage.css">
-
     <script src="../ApiURL.js"></script>
     <script src="../ChatHub.js"></script>
     <script src="../Function/WebApiFunc.js"></script>
@@ -17,11 +16,12 @@
     <script src="frontpage_addform.js"></script>
     <script src="../UI/H5_Date/map.js"></script>
     <!-- <script src="../session_check.js"></script> -->
-
+    
 </head>
 <body>
   <div class="form" id="form" style="width: 100%; height: 100%;">
     <script>
+     
     const form = document.querySelector("#form");
     form.style.display = "flex";
     form.style.width = "100%";
@@ -43,6 +43,7 @@
   <B> Copyright ©2023 鴻森整合機電有限公司 </B>
 </div>
 <script>
+
    $(function()
    {
         $('.find_start_date_input').focus(function(event) 
@@ -77,7 +78,10 @@
         });
 
   }) 
-  signalR_init();
+  
+
+
+  signalR_init(`${api_ip}chatHub`);
   document.addEventListener('ReceivedEvent', function (event) 
   {   
      var jsonObject = JSON.parse(event.detail.message); 
