--- a/inventory/frontpage.html
+++ b/inventory/frontpage.html
@@ -5,16 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>盤點單管理</title>
     <link rel="stylesheet" href="fronpage.css">
-    <script src="../ApiURL.js"></script>
-    <script src="../ChatHub.js"></script>
-    <script src="../Function/WebApiFunc.js"></script>
-    <script src="../svg/mySVG.js"></script>
-    <script src="../Function/Basic.js"></script>
-    <script src="../popup/loading.js"></script>
+    <script src="../../ApiURL.js"></script>
+    <script src="../../ChatHub.js"></script>
+    <script src="../../Function/WebApiFunc.js"></script>
+    <script src="../../svg/mySVG.js"></script>
+    <script src="../../Function/Basic.js"></script>
+    <script src="../../popup/loading.js"></script>
+    <script src="../../UI/H5_Date/map.js"></script>
+
     <script src="jsonFunc.js"></script>
     <script src="frontpage.js"></script>
     <script src="frontpage_addform.js"></script>
-    <script src="../UI/H5_Date/map.js"></script>
+ 
     <!-- <script src="../session_check.js"></script> -->
     
 </head>
